<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yangm89.myfirstapplication.MainActivity">

    <LinearLayout
        android:id="@+id/cardCont"
        android:layout_width="378dp"
        android:layout_height="252dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView_card1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".333"
            android:contentDescription="@string/card1"

            app:srcCompat="@color/colorAccent" />

        <ImageView
            android:id="@+id/imageView_card2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".333"
            android:contentDescription="@string/card2"

            app:srcCompat="@color/colorAccent" />

        <ImageView
            android:id="@+id/imageView_card3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".333"
            android:contentDescription="@string/card3"

            app:srcCompat="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardRemCont"
        android:layout_width="386dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardCont"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView_cardRem"
            android:layout_width="137dp"
            android:layout_height="match_parent"

            android:text="@string/remaining"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/cardRemaingTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_p1ScoreLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView_p1Score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_p2ScoreLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView_p2Score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/idcontainer"
        android:layout_width="379dp"
        android:layout_height="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_p1Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView_p2Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="379dp"
        android:layout_height="216dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idcontainer">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
